# EraseIt

./: .gitignore  BitInteract.c  CMakeLists.txt  EraseIt.c  README.md
lib/: joystick.c  joystick.h  oledgfx.c  oledgfx.h
